--- a/.gitignore
+++ b/.gitignore
@@ -4,6 +4,9 @@ target/
 !**/src/main/**/target/
 !**/src/test/**/target/
 
+### Configuration file ###
+/data/
+
 ### STS ###
 .apt_generated
 .classpath
