--- a/pom.xml
+++ b/pom.xml
@@ -10,7 +10,7 @@
     </parent>
     <groupId>io.github.klee-contrib</groupId>
     <artifactId>sonarqube-migration</artifactId>
-    <version>0.0.1-SNAPSHOT</version>
+    <version>1.0.0</version>
     <name>sonarqube-migration</name>
     <description>Demo project for Spring Boot</description>
     <properties>
